--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html data-theme="default" manifest="app.manifest">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <title>EasyNotes</title>
 <meta name="apple-mobile-web-app-title" content="EasyNotes">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover" />
