--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	let DevicePlatform = -1;
 	let PlatformNames = ['Android', 'iOS', 'Windows'];
 	let UseManualAddress = true; // Ручной ввод адреса
-	let IsPWA = false; // Ручной ввод адреса
+	let IsPWA = true; // Ручной ввод адреса
 	
 	let FirstRun = false;
 	let DeviceID;
